# Unet_brain_segmentation

./: CMakeLists.txt  README.md  brainUnet.cpp  brainUnet.hpp  main.cpp  main_.cpp  model_script.py  predicted_mask.tif
include/: brainUnet.hpp
